--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serenity = { default-features = true, features = ["client", "cache", "gateway", 
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
 dotenv = "0.15.0"
 chrono = "0.4.19"
+serde = "1.0.130"
+serde_yaml = "0.8.21"
