--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 serenity = { default-features = true, features = ["client", "cache", "gateway", "rustls_backend", "model", "unstable_discord_api"], version = "0.10.9" }
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "signal", "sync"] }
 dotenv = "0.15.0"
 chrono = "0.4.19"
 serde = "1.0.130"
