--- a/config.example.json
+++ b/config.example.json
@@ -4,8 +4,8 @@
   "database": {
     "host": "localhost",
     "port": "5432",
-    "name": "techbox",
-    "user": "techbox",
-    "password": "techbox"
+    "name": "bussy",
+    "user": "bussy",
+    "password": "bussy"
   }
 }
